# NMR2Struct

./: README.md  environment.yml  pyproject.toml  run_nmr_training.py
data/: __init__.py  build_dataset.py  dataset_sketch.py  input_generators.py  target_generators.py
models/: __init__.py  build_model.py  combined_model.py  convolutional_model.py  transformer_model.py
networks/: connecter.py  convolutional.py  embedding_fxns.py  transformer.py
nmr/analysis/: analysis_runner.py  metric_fxns.py  postprocessing.py  util.py
nmr/data/: __init__.py  build_dataset.py  dataset_base.py  input_generators.py  target_generators.py
nmr/inference/: inference.py  inference_fxns.py
nmr/models/: __init__.py  build_model.py  combined_model.py  convolutional_model.py  encoder_model.py  mhanet_model.py  multitask_model.py  transformer_model.py
nmr/networks/: convolutional.py  embeddings.py  encoder.py  forward_fxns.py  mhanet.py  transformer.py
nmr/scripts/: modify_config_auto_restart.py  run_nmr_analysis.py  run_nmr_inference.py  run_nmr_inference_single_spectrum.py  run_nmr_training.py  top_level_utils.py  train_lightning.py
nmr/training/: loss_fxns.py  trainer.py
training/: build_optimizer.py  trainer.py
